fix phone hero alignment and typed destroy on resize

--- a/assets/scss/components/Hero.scss
+++ b/assets/scss/components/Hero.scss
@@ -166,6 +166,10 @@
             width: 22.153vw;
             pointer-events: none;
 
+            @include min(xl) {
+                min-width: 483px;
+            }
+
             @include max(md) {
                 display: none;
             }
@@ -184,13 +188,13 @@
                         max-width: 323px;
                         max-height: 702px;
                         -webkit-mask-image: -webkit-radial-gradient(white, black); // Fix border radius overflow not hidden
+                        margin-left: auto;
 
                         @include min(xl) {
                             max-width: 100%;
                             max-height: 100%;
                             width: 483px;
                             height: 1030px;
-                            margin-left: auto;
                         }
                     }
                 }
